@@ -145,6 +145,8 @@ wxMSW/CE:
 wxGTK:
 
 - Fixed printing to use fonts sizes adjustment consistent with wxMSW.
+- Make colours used by list, tree and status bar controls more consistent with
+  the system theme settings (Tim Kosse).
 
 2.8.9
 -----
